<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="384dp"
        android:layout_height="0dp"
        android:background="@color/verde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="129dp"
        android:background="@drawable/cabecerabanos"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="Instalaciones y Servicios "
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <ImageView
        android:id="@+id/flecha3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_flecha_izquierda"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="360dp"
        android:layout_height="112dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="8dp"
        android:text="@string/recursoinsta"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:text="Instalaciones"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.457" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="114dp"
        android:layout_height="156dp"
        android:layout_marginBottom="4dp"
        android:text="@string/instalaciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toStartOf="@+id/guideline15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Servicios"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="128dp"
        android:layout_height="153dp"
        android:layout_marginTop="8dp"
        android:text="@string/servicios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="352dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="192dp" />


</android.support.constraint.ConstraintLayout>
